fixed height of result and overflow scrolling

--- a/css/app.css
+++ b/css/app.css
@@ -8,3 +8,7 @@
     border-left: 6px solid #2196F3;
 }
 
+#result {
+    height: 100%;
+    overflow: scroll;
+}
